# imcrop

./: .gitignore  CMakeLists.txt  README.md
include/: cropper.hpp  file_utils.hpp  usage.hpp
src/: cropper.cpp  file_utils.cpp  main.cpp
